# premaidai_simulator

./: .gitignore  README.md  premaidai_simulator.rosinstall
premaidai_gazebo/: CMakeLists.txt  package.xml
premaidai_gazebo/launch/: premaidai.launch  premaidai_empty_world.launch  rviz_control.launch
premaidai_gazebo/worlds/: premaidai.world
premaidai_gazebo_ros_plugins/: CMakeLists.txt  package.xml
premaidai_gazebo_ros_plugins/include/premaidai_gazebo_ros_plugins/: PremaidAIPlugin.hh
premaidai_gazebo_ros_plugins/src/: PremaidAIPlugin.cc
premaidai_simulator/: CMakeLists.txt  package.xml
