<?xml version="1.0"?>
<package format="2">
  <name>premaidai_gazebo_ros_plugins</name>
  <version>0.0.0</version>
  <description>The premaidai_gazebo_ros_plugins package</description>

  <maintainer email="t_chiku@todo.todo">chiku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>

  <exec_depend>premaidai_description</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
</package>
