<?xml version="1.0"?>
<package format="2">
  <name>premaidai_simulator</name>
  <version>0.0.0</version>
  <description>The premaidai_simulator package</description>
  <maintainer email="chikuta@todo.todo">t_chiku</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>premaidai_gazebo</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
